updated font-weight and color on button due contrast issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,9 @@ body, html {
     left: 0;
     bottom: 0;
     margin-left: 10px; 
+    font-weight: 500;
+    color: black;
+   
 }
 
 .space-below {
